--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script src="https://s.yezgea02.com/1609305532675/echarts.js"></script>    
     <!-- built files will be auto injected -->
   </body>
 </html>
